# simple-pascal-interpreter

./: .gitignore  Cargo.toml  README.md
simple_pascal_ast/: Cargo.toml
simple_pascal_ast/src/: lexer.rs  lib.rs  node.rs  parser.rs
simple_pascal_ast/src/token/: delim.rs  keyword.rs  literal.rs  mod.rs  op.rs
simple_pascal_ast/tests/: parser.rs
simple_pascal_interpreter/: Cargo.toml
simple_pascal_interpreter/src/: interpreter.rs  lib.rs
simple_pascal_interpreter/tests/: interpreter.rs
