[package]
name = "simple-pascal-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_pascal_ast = { path = "./simple_pascal_ast" }
simple_pascal_interpreter = { path = "./simple_pascal_interpreter" }